# aigroup-quant-mcp

./: .gitignore  BUG_FIX_SUMMARY.md  CHANGELOG.md  DEVELOPING.md  FINAL_TEST_REPORT.md  MCP工具使用体验优化建议.md  MCP服务优化建议.md  PERFORMANCE_OPTIMIZATION.md  README.md  RELEASE_v1.0.29.md  RELEASE_v1.0.30.md  RELEASE_v1.0.31.md  RESTART_MCP_SERVER.md  analyze_construction_bank.py  check_tools.py  classifiers.txt  config.example.json  construction_bank_analysis_report.md  construction_bank_data.csv  construction_bank_full_data.csv  diagnose_mcp_connection.py  final_verification.py  market_data_000001.csv  pyproject.toml  requirements.txt  setup.py  simple_test.py  simple_verification.py  test_all_tools_optimization.py  test_data_format_conversion.py  test_factor_accuracy.py  test_final_fixes.py  test_final_optimization.py  test_fix_verification.py  test_fixed_functions.py  test_mcp_conversion.py  test_mcp_server.py  test_mcp_tools.py  test_ml_algorithms.py  test_modular_mcp.py  (+10 more)
.model_cache/: gradient_boosting_2503721864896.pkl  linear_2503721556624.pkl  random_forest_1236622547920.pkl  xgboost_2562440363520.pkl
.roo/: mcp.json
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
docs/: MERGE_FACTOR_DATA_GUIDE.md  ML_MODELS_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  README.md  ROOCODE_CONFIG.md  development.md  empty_column_removal.md
examples/: analyze_real_data.py  basic_usage.py  complete_workflow.py  create_sample_data.py  data_format_conversion_example.py  fetch_real_data.py  test_alpha158_and_dl.py  test_basic_functions.py  test_ml_models.py  (+1 more)
(+41 files in other folders)
