[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aigroup-quant-mcp"
version = "1.0.34"
description = "AI Group Quantitative Analysis MCP Service - Enhanced ML Support & Factor Accuracy"
readme = "README.md"
license = "MIT"
authors = [{name = "AI Group", email = "ai.group@example.com"}]
requires-python = ">=3.8"
dynamic = ["classifiers"]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "mcp>=1.0.0",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "psutil>=5.9.0",
    "memory-profiler>=0.61.0",
    "tqdm>=4.65.0"
]

[project.optional-dependencies]
# 深度学习支持已移除，专注于轻量级机器学习模型
# 如果需要深度学习功能，请使用专门的深度学习环境
full = [
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "psutil>=5.9.0",
    "memory-profiler>=0.61.0",
    "tqdm>=4.65.0"
]
viz = ["matplotlib>=3.7.0"]
dev = ["pytest>=7.4.0"]

[project.scripts]
aigroup-quant-mcp = "quantanalyzer.mcp:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantanalyzer*"]

[tool.setuptools.dynamic]
classifiers = {file = ["classifiers.txt"]}